# sync-log-ai

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  auditor.py  pyproject.toml  random_auditor.py  requirements.txt  rules.yaml  sync_engine.py  utils.py
synclogai/: __init__.py  audit.py  cli.py  engine.py  utils.py
